<resources>
  <string name="app_name">SmartPaddy</string>
  <string name="login">Login</string>
  <string name="sign_in_with_google">Sign in with Google</string>
  <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
  <string name="email_address">Email Address</string>
  <string name="password">Password</string>
  <string name="forgot_password">Forgot Password</string>
  <string name="login_success">Login Success</string>
  <string name="login_failed">Login Failed</string>
  <string name="email_not_valid">Invalid Email</string>
  <string name="email_pass_empty">Email or password is empty</string>
  <string name="register">Register</string>
  <string name="already_have_an_account">Already have an account?</string>
  <string name="login_here">Login here</string>
  <string name="name">Name</string>
  <string name="password_not_valid">Password not valid</string>
  <string name="register_success">Register Success!</string>
  <string name="register_failed">Register failed</string>
  <string name="available">Available</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="home">Home</string>
  <string name="camera">Camera</string>
  <string name="profile">Profile</string>
  <string name="history">History</string>
  <string name="you_have_been_detected">You Have Been Detected</string>
  <string name="logo">logo</string>
  <string name="paddy_iv">paddy_iv</string>
  <string name="registration_success">Registration success</string>
  <string name="registration_failed">Registration failed</string>
  <string name="greetings">Hi, %1$s!</string>
  <string name="here_s_your_detected_diseases_recap">Here\'s your detected diseases recap!</string>
  <string name="analyze">Analyze</string>
  <string name="gallery">Gallery</string>
  <string name="dark_mode">Dark Mode</string>
  <string name="log_out">Log out</string>
  <string name="let_s_learn_more_about_plants">Let\'s Learn More About Plants</string>
  <string name="gejala">Gejala</string>
  <string name="cara_menangani">Cara Menangani</string>
  <string name="history_detail">History Detail</string>
  <string name="error">Password must be at least 8 characters including a capital letters, number, and symbol.</string>
  <string name="logout_confirmation">Logout</string>
  <string name="logout_message">Are you sure you want to logout?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="show_password">Show password</string>
  <string name="penjelasan">Penjelasan</string>
  <string name="wow_i_guess_you_have_a_healthy_rice_fields">Wow, I guess you have a healthy rice fields!</string>
</resources>