<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.home.HomeFragment"
    >

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:background="?attr/colorPrimary"
      android:layout_height="@dimen/dimen_75"
      android:padding="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/tv_username"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:fontFamily="@font/bold"
          android:textStyle="bold" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/let_s_learn_more_about_plants"
          android:textColor="@color/white"
          android:fontFamily="@font/regular"
          android:textSize="@dimen/font_12"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/log_out"
        android:src="@drawable/baseline_logout_24"
        android:background="@null"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"/>

  </androidx.appcompat.widget.Toolbar>

  <TextView
      android:id="@+id/home_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/wow_i_guess_you_have_a_healthy_rice_fields"
      android:textSize="@dimen/font_20"
      android:layout_marginTop="30dp"
      android:textColor="@color/brown"
      android:fontFamily="@font/bold"
      android:paddingHorizontal="24dp"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      />

  <LinearLayout
      android:id="@+id/paddy_count_ll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/home_title_tv"
      >

    <TextView
        android:id="@+id/paddy_count_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/font_45"
        android:textColor="?attr/colorTertiary"
        android:fontFamily="@font/extrabold"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        />
  </LinearLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/camera_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@drawable/button_green"
      android:fontFamily="@font/extrabold"
      android:paddingHorizontal="24dp"
      android:text="Click here to make sure!"
      android:textColor="@color/white"
      android:textSize="16sp"
      android:layout_marginTop="30dp"
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/paddy_count_ll"
      />

  <TextView
      android:id="@+id/home_subtitle_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/here_s_your_detected_diseases_recap"
      android:textSize="@dimen/font_18"
      android:layout_marginTop="30dp"
      android:textColor="@color/brown"
      android:fontFamily="@font/semibold"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/paddy_count_ll"
      />

  <TextView
      android:id="@+id/history_btn_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:focusable="true"
      android:text="@string/history"
      android:fontFamily="@font/medium"
      android:textSize="@dimen/font_22"
      android:textColor="@color/brown"
      android:visibility="gone"
      app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
      android:layout_marginTop="30dp"
      android:paddingHorizontal="24dp"
      android:clickable="true"
      app:layout_constraintTop_toBottomOf="@+id/home_subtitle_tv"
      />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/history_rv"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/history_btn_tv"
      />

  <ProgressBar
      android:id="@+id/progress_indicator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:indeterminateTint="?attr/colorPrimary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
</androidx.constraintlayout.widget.ConstraintLayout>