<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_32"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_register_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="@dimen/font_24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="@dimen/dimen_none"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no"
        android:padding="@dimen/dimen_16"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_person"
        android:textColorHint="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/email_address"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="@dimen/dimen_none"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no"
        android:padding="@dimen/dimen_16"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_email"
        android:textColorHint="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_password"
        android:padding="@dimen/dimen_16"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_24"
        android:background="@drawable/button_style"
        android:textColor="@color/white"
        android:fontFamily="@font/bold"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        />

<!--    <ImageButton-->
<!--        android:id="@+id/btn_google"-->
<!--        android:layout_width="@dimen/dimen_50"-->
<!--        android:layout_height="@dimen/dimen_50"-->
<!--        android:layout_marginTop="@dimen/dimen_24"-->
<!--        android:background="@null"-->
<!--        android:importantForAccessibility="no"-->
<!--        android:src="@drawable/ic_google"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/btn_register"-->
<!--        />-->

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/already_have_an_account"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/login_here"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
