<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".presentation.camera.CameraActivity"
    >

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:background="?attr/colorPrimary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_back"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bold"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:textSize="@dimen/font_20"
        />

  </androidx.appcompat.widget.Toolbar>

  <androidx.cardview.widget.CardView
      android:id="@+id/preview_cv"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_margin="16dp"
      android:layout_weight="1"
      app:cardCornerRadius="12dp"
      app:cardElevation="4dp"
      app:strokeWidth="2dp"
      >

    <ImageView
        android:id="@+id/preview_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription"
        />
  </androidx.cardview.widget.CardView>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginHorizontal="16dp"
      android:orientation="horizontal"
      >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gallery_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:background="@drawable/button_green"
        android:fontFamily="@font/extrabold"
        android:textSize="16sp"
        />

    <Space
        android:layout_width="@dimen/dimen_10"
        android:layout_height="wrap_content"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:background="@drawable/button_green"
        android:fontFamily="@font/extrabold"
        android:textSize="16sp"
        />
  </LinearLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/analyze_btn"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:layout_marginTop="@dimen/dimen_10"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:textColor="@color/white"
      android:text="@string/analyze"
      android:background="@drawable/button_green"
      android:fontFamily="@font/extrabold"
      android:textSize="16sp"
      app:cornerRadius="28dp" />

  <ProgressBar
      android:id="@+id/progress_indicator"
      android:layout_width="wrap_content"
      android:layout_height="56dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:indeterminateTint="?attr/colorPrimary"
      android:visibility="gone"
      android:layout_gravity="center"
      />
</LinearLayout>